@@ -1,3 +1,8 @@
+2002-12-11  Ulrich Drepper  <drepper@redhat.com>
+
+	* init.c (__pthread_initialize_minimal): Fix initialization in
+	static lib by preventing gcc from being too clever.
+
 2002-12-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* init.c (__pthread_initialize_minimal): Remove unneccesary
